@@ -255,7 +255,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     Assert.assertNotNull(actualParentJobExecutionId);
     assertEquals(expectedJobExecutionsNumber, actualJobExecutions.size());
 
-    JobExecution parentSingle = actualJobExecutions.get(0);
+    JobExecution parentSingle = actualJobExecutions.getFirst();
     assertEquals(JobExecution.SubordinationType.PARENT_SINGLE, parentSingle.getSubordinationType());
     assertParent(parentSingle);
   }
@@ -287,7 +287,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     Assert.assertNotNull(actualParentJobExecutionId);
     assertEquals(expectedJobExecutionsNumber, actualJobExecutions.size());
 
-    JobExecution parentSingle = actualJobExecutions.get(0);
+    JobExecution parentSingle = actualJobExecutions.getFirst();
     Assert.assertNotNull(parentSingle);
     assertEquals(JobExecution.SubordinationType.PARENT_SINGLE, parentSingle.getSubordinationType());
     Assert.assertNotNull(parentSingle.getId());
@@ -323,7 +323,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     Assert.assertNotNull(actualParentJobExecutionId);
     assertEquals(expectedJobExecutionsNumber, actualJobExecutions.size());
 
-    JobExecution parentSingle = actualJobExecutions.get(0);
+    JobExecution parentSingle = actualJobExecutions.getFirst();
     Assert.assertNotNull(parentSingle);
     assertEquals(JobExecution.SubordinationType.PARENT_SINGLE, parentSingle.getSubordinationType());
     Assert.assertNotNull(parentSingle.getId());
@@ -456,7 +456,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution singleParent = createdJobExecutions.get(0);
+    JobExecution singleParent = createdJobExecutions.getFirst();
     assertThat(singleParent.getSubordinationType(), is(JobExecution.SubordinationType.PARENT_SINGLE));
 
     singleParent.setJobProfileInfo(
@@ -492,10 +492,10 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     RestAssured.given()
       .spec(spec)
       .when()
-      .get(JOB_EXECUTION_PATH + createdJobExecutions.get(0).getId())
+      .get(JOB_EXECUTION_PATH + createdJobExecutions.getFirst().getId())
       .then()
       .statusCode(HttpStatus.SC_OK)
-      .body("id", is(createdJobExecutions.get(0).getId()))
+      .body("id", is(createdJobExecutions.getFirst().getId()))
       .body("hrId", greaterThanOrEqualTo(0))
       .body("runBy.firstName", notNullValue())
       .body("runBy.lastName", notNullValue());
@@ -560,7 +560,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     RestAssured.given()
       .spec(spec)
@@ -632,7 +632,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     StatusDto status = new StatusDto().withStatus(StatusDto.Status.PARSING_IN_PROGRESS);
     RestAssured.given()
@@ -689,7 +689,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
   public void shouldUpdateStatusOfCompositeParent() {
     List<JobExecution> executions = constructAndPostCompositeInitJobExecutionRqDto("test", 1);
     assertThat(executions.size(), is(2));
-    JobExecution parent = executions.get(0);
+    JobExecution parent = executions.getFirst();
     JobExecution child = executions.get(1);
 
     // update child to a non-completion state; should NOT update parent
@@ -735,7 +735,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
   public void shouldUpdateStatusOfCompositeParentMultipleChildren() {
     List<JobExecution> executions = constructAndPostCompositeInitJobExecutionRqDto("test", 2);
     assertThat(executions.size(), is(3));
-    JobExecution parent = executions.get(0);
+    JobExecution parent = executions.getFirst();
     JobExecution child1 = executions.get(1);
     JobExecution child2 = executions.get(2);
 
@@ -791,7 +791,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       RestAssured.given()
         .spec(spec)
         .body(JsonObject.mapFrom(childRequestDto).toString())
-        .when().post(JOB_EXECUTION_PATH).body().as(InitJobExecutionsRsDto.class).getJobExecutions().get(0);
+        .when().post(JOB_EXECUTION_PATH).body().as(InitJobExecutionsRsDto.class).getJobExecutions().getFirst();
 
     // update child to a completion state; should now attempt to update parent
     // the parent does not exist, though, so it should throw a 500
@@ -811,7 +811,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExecution = createdJobExecutions.get(0);
+    JobExecution jobExecution = createdJobExecutions.getFirst();
     assertThat(jobExecution.getSubordinationType(), is(JobExecution.SubordinationType.PARENT_SINGLE));
     Assert.assertNotNull(jobExecution.getRunBy().getFirstName());
     Assert.assertNotNull(jobExecution.getRunBy().getLastName());
@@ -847,7 +847,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExecution = createdJobExecutions.get(0);
+    JobExecution jobExecution = createdJobExecutions.getFirst();
     assertThat(jobExecution.getSubordinationType(), is(JobExecution.SubordinationType.PARENT_SINGLE));
     Assert.assertNotNull(jobExecution.getRunBy().getFirstName());
     Assert.assertNotNull(jobExecution.getRunBy().getLastName());
@@ -884,7 +884,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     StatusDto status = new StatusDto().withStatus(StatusDto.Status.PARENT);
     RestAssured.given()
@@ -1000,7 +1000,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     jobExec.setStatus(JobExecution.Status.PARENT);
     RestAssured.given()
@@ -1051,7 +1051,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     JobProfileInfo jobProfile = new JobProfileInfo().withId(DEFAULT_INSTANCE_JOB_PROFILE_ID).withName("marc");
     RestAssured.given()
@@ -1077,7 +1077,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(new UrlPathPattern(new RegexPattern(PROFILE_SNAPSHOT_URL + "/.*"), true))
       .willReturn(serverError()));
@@ -1107,7 +1107,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     JobProfileInfo jobProfile =
       new JobProfileInfo().withId(DEFAULT_INSTANCE_JOB_PROFILE_ID).withName("Default job profile");
@@ -1161,7 +1161,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(RECORDS_SERVICE_URL)
       .willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
@@ -1209,7 +1209,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(RECORDS_SERVICE_URL)
       .willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
@@ -1244,7 +1244,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(RECORDS_SERVICE_URL)
       .willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
@@ -1291,7 +1291,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     InitJobExecutionsRsDto response = constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
     WireMock.stubFor(
       post(RECORDS_SERVICE_URL).willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
 
@@ -1382,7 +1382,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     InitJobExecutionsRsDto response = constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
     WireMock.stubFor(
       post(RECORDS_SERVICE_URL).willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
 
@@ -1462,7 +1462,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(WireMock.put(PARSED_RECORDS_COLLECTION_URL)
       .willReturn(WireMock.serverError()));
@@ -1513,7 +1513,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(RECORDS_SERVICE_URL)
       .willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
@@ -1548,7 +1548,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
     jobExec.setRunBy(new RunBy().withFirstName("DIKU").withLastName("ADMINISTRATOR"));
     jobExec.setProgress(new Progress().withCurrent(1000).withTotal(1000));
     jobExec.setStartedDate(new Date());
@@ -1639,7 +1639,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution singleParent = createdJobExecutions.get(0);
+    JobExecution singleParent = createdJobExecutions.getFirst();
     assertThat(singleParent.getSubordinationType(), is(JobExecution.SubordinationType.PARENT_SINGLE));
 
     singleParent.setJobProfileInfo(
@@ -1681,7 +1681,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     MatchProfile matchProfile = new MatchProfile()
       .withName("match 999ff $s to 999ff $s");
@@ -1778,7 +1778,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     InitJobExecutionsRsDto response = constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     Async async = testContext.async();
     RestAssured.given()
@@ -1835,7 +1835,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(RECORDS_SERVICE_URL)
       .willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
@@ -1904,7 +1904,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(WireMock.delete(new UrlPathPattern(new RegexPattern("/source-storage/snapshots/.{36}"), true))
       .willReturn(WireMock.noContent()));
@@ -1948,7 +1948,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     InitJobExecutionsRsDto response = constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(RECORDS_SERVICE_URL)
       .willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
@@ -1995,7 +1995,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(RECORDS_SERVICE_URL)
       .willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
@@ -2060,7 +2060,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(RECORDS_SERVICE_URL)
       .willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
@@ -2106,7 +2106,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(new UrlPathPattern(new RegexPattern(PROFILE_SNAPSHOT_URL + "/.*"), true))
       .willReturn(WireMock.created().withBody(Json.encode(matchProfileSnapshotWrapperResponse))));
@@ -2143,7 +2143,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
 
     String topicToObserve = formatToKafkaTopicName(DI_MARC_FOR_UPDATE_RECEIVED.value());
     List<String> observedValues = getValues(checkKafkaEventSent(topicToObserve, 1));
-    Event obtainedEvent = Json.decodeValue(observedValues.get(0), Event.class);
+    Event obtainedEvent = Json.decodeValue(observedValues.getFirst(), Event.class);
     assertEquals(DI_MARC_FOR_UPDATE_RECEIVED.value(), obtainedEvent.getEventType());
     DataImportEventPayload dataImportEventPayload = Json
       .decodeValue(obtainedEvent.getEventPayload(), DataImportEventPayload.class);
@@ -2160,7 +2160,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(RECORDS_SERVICE_URL)
       .willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
@@ -2190,7 +2190,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
 
     String topicToObserve = formatToKafkaTopicName(DI_ERROR.value());
     List<String> observedValues = getValues(checkKafkaEventSent(topicToObserve, 1));
-    Event obtainedEvent = Json.decodeValue(observedValues.get(0), Event.class);
+    Event obtainedEvent = Json.decodeValue(observedValues.getFirst(), Event.class);
     assertEquals(DI_ERROR.value(), obtainedEvent.getEventType());
     DataImportEventPayload eventPayload = Json.decodeValue(obtainedEvent.getEventPayload(), DataImportEventPayload.class);
 
@@ -2207,7 +2207,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     InitJobExecutionsRsDto response = constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(WireMock.get("/data-import-profiles/jobProfiles/" + DEFAULT_INSTANCE_JOB_PROFILE_ID + "?withRelations=false&")
       .willReturn(WireMock.ok().withBody(Json.encode(new JobProfile().withId(DEFAULT_INSTANCE_JOB_PROFILE_ID)
@@ -2244,8 +2244,8 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     async.complete();
 
     String topicToObserve = formatToKafkaTopicName(DI_INCOMING_MARC_BIB_RECORD_PARSED.value());
-    List<String> observedValues = getValues(checkKafkaEventSent(topicToObserve, 54));
-    Event obtainedEvent = Json.decodeValue(observedValues.get(53), Event.class);
+    List<String> observedValues = getValues(checkKafkaEventSent(topicToObserve, 1));
+    Event obtainedEvent = Json.decodeValue(observedValues.getFirst(), Event.class);
     assertEquals(DI_INCOMING_MARC_BIB_RECORD_PARSED.value(), obtainedEvent.getEventType());
     DataImportEventPayload eventPayload = Json.decodeValue(obtainedEvent.getEventPayload(), DataImportEventPayload.class);
     JsonObject record = new JsonObject(eventPayload.getContext().get("MARC_BIBLIOGRAPHIC"));
@@ -2259,7 +2259,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(WireMock.get("/data-import-profiles/jobProfiles/" + DEFAULT_MARC_AUTHORITY_JOB_PROFILE_ID + "?withRelations=false&")
       .willReturn(WireMock.ok().withBody(Json.encode(new JobProfile().withId(DEFAULT_MARC_AUTHORITY_JOB_PROFILE_ID).withName("Default - Create SRS MARC Authority")))));
@@ -2296,13 +2296,13 @@ public class ChangeManagerAPITest extends AbstractRestTest {
 
     String topicToObserve = formatToKafkaTopicName(DI_RAW_RECORDS_CHUNK_PARSED.value());
     List<String> observedValues = getValues(checkKafkaEventSent(topicToObserve, 1));
-    Event obtainedEvent = Json.decodeValue(observedValues.get(0), Event.class);
+    Event obtainedEvent = Json.decodeValue(observedValues.getFirst(), Event.class);
     assertEquals(DI_RAW_RECORDS_CHUNK_PARSED.value(), obtainedEvent.getEventType());
     RecordCollection recordCollection = Json.decodeValue(obtainedEvent.getEventPayload(), RecordCollection.class);
-    assertNull(recordCollection.getRecords().get(0).getMatchedId());
-    assertNotNull(recordCollection.getRecords().get(0).getErrorRecord());
+    assertNull(recordCollection.getRecords().getFirst().getMatchedId());
+    assertNotNull(recordCollection.getRecords().getFirst().getErrorRecord());
     assertEquals("{\"error\":\"A new MARC-Authority was not created because the incoming record already contained a 999ff$s or 999ff$i field\"}",
-      recordCollection.getRecords().get(0).getErrorRecord().getDescription());
+      recordCollection.getRecords().getFirst().getErrorRecord().getDescription());
   }
 
   @Test
@@ -2311,7 +2311,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(post(RECORDS_SERVICE_URL)
       .willReturn(created().withTransformers(RequestToResponseTransformer.NAME)));
@@ -2341,7 +2341,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
 
     String topicToObserve = formatToKafkaTopicName(DI_ERROR.value());
     List<String> observedValues = getValues(checkKafkaEventSent(topicToObserve, 1));
-    Event obtainedEvent = Json.decodeValue(observedValues.get(0), Event.class);
+    Event obtainedEvent = Json.decodeValue(observedValues.getFirst(), Event.class);
     assertEquals(DI_ERROR.value(), obtainedEvent.getEventType());
     DataImportEventPayload eventPayload = Json.decodeValue(obtainedEvent.getEventPayload(), DataImportEventPayload.class);
     MatcherAssert.assertThat(new JsonObject(eventPayload.getContext().get("ERROR")).getString("message"),
@@ -2354,7 +2354,7 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     WireMock.stubFor(WireMock.get("/data-import-profiles/jobProfiles/" + DEFAULT_MARC_HOLDINGS_JOB_PROFILE_ID + "?withRelations=false&")
       .willReturn(WireMock.ok().withBody(Json.encode(new JobProfile().withId(DEFAULT_MARC_HOLDINGS_JOB_PROFILE_ID).withName("Default - Create Holdings and SRS MARC Holdings")))));
@@ -2392,13 +2392,13 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     String topicToObserve = formatToKafkaTopicName(DI_RAW_RECORDS_CHUNK_PARSED.value());
     List<String> observedValues = getValues(checkKafkaEventSent(topicToObserve, 1));
 
-    Event obtainedEvent = Json.decodeValue(observedValues.get(0), Event.class);
+    Event obtainedEvent = Json.decodeValue(observedValues.getFirst(), Event.class);
     assertEquals(DI_RAW_RECORDS_CHUNK_PARSED.value(), obtainedEvent.getEventType());
     RecordCollection recordCollection = Json.decodeValue(obtainedEvent.getEventPayload(), RecordCollection.class);
-    assertNull(recordCollection.getRecords().get(0).getMatchedId());
-    assertNotNull(recordCollection.getRecords().get(0).getErrorRecord());
+    assertNull(recordCollection.getRecords().getFirst().getMatchedId());
+    assertNotNull(recordCollection.getRecords().getFirst().getErrorRecord());
     assertEquals("{\"error\":\"A new MARC-Holding was not created because the incoming record already contained a 999ff$s or 999ff$i field\"}",
-      recordCollection.getRecords().get(0).getErrorRecord().getDescription());
+      recordCollection.getRecords().getFirst().getErrorRecord().getDescription());
   }
 
   @Test
@@ -2439,8 +2439,8 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       .delete(JOB_EXECUTION_PATH)
       .then()
       .statusCode(HttpStatus.SC_OK)
-      .body("jobExecutionDetails.isDeleted.get(0)", is(true))
-      .body("jobExecutionDetails.jobExecutionId.get(0)", is(parentJobExecutionId));
+      .body("jobExecutionDetails.isDeleted.getFirst()", is(true))
+      .body("jobExecutionDetails.jobExecutionId.getFirst()", is(parentJobExecutionId));
   }
 
   @Test
@@ -2489,8 +2489,8 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       .delete(JOB_EXECUTION_PATH)
       .then()
       .statusCode(HttpStatus.SC_OK)
-      .body("jobExecutionDetails.jobExecutionId.get(0)", is(parentJobExecutionId))
-      .body("jobExecutionDetails.isDeleted.get(0)", is(true))
+      .body("jobExecutionDetails.jobExecutionId.getFirst()", is(parentJobExecutionId))
+      .body("jobExecutionDetails.isDeleted.getFirst()", is(true))
       .body("jobExecutionDetails.jobExecutionId.get(1)", is(parentJobExecutionId_2))
       .body("jobExecutionDetails.isDeleted.get(1)", is(true));
   }
@@ -2523,8 +2523,8 @@ public class ChangeManagerAPITest extends AbstractRestTest {
     String parentJobExecutionId_2 = constructAndPostInitJobExecutionRqDto(1).getParentJobExecutionId();
     DeleteJobExecutionsResp deleteJobExecutionsResp =
       returnDeletedJobExecutionResponse(new String[] {parentJobExecutionId});
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getJobExecutionId(), is(parentJobExecutionId));
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getIsDeleted(), is(true));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getJobExecutionId(), is(parentJobExecutionId));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getIsDeleted(), is(true));
 
     RestAssured.given()
       .spec(spec)
@@ -2566,8 +2566,8 @@ public class ChangeManagerAPITest extends AbstractRestTest {
 
     DeleteJobExecutionsResp deleteJobExecutionsResp =
       returnDeletedJobExecutionResponse(new String[] {multipleParent.getId()});
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getJobExecutionId(), is(multipleParent.getId()));
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getIsDeleted(), is(true));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getJobExecutionId(), is(multipleParent.getId()));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getIsDeleted(), is(true));
 
     RestAssured.given()
       .spec(spec)
@@ -2587,8 +2587,8 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       .filter(jobExec -> jobExec.getSubordinationType().equals(JobExecution.SubordinationType.CHILD)).findFirst().get();
 
     DeleteJobExecutionsResp deleteJobExecutionsResp = returnDeletedJobExecutionResponse(new String[] {child.getId()});
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getJobExecutionId(), is(child.getId()));
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getIsDeleted(), is(true));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getJobExecutionId(), is(child.getId()));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getIsDeleted(), is(true));
 
     StatusDto status = new StatusDto().withStatus(StatusDto.Status.PARSING_IN_PROGRESS);
     RestAssured.given()
@@ -2606,11 +2606,11 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     DeleteJobExecutionsResp deleteJobExecutionsResp = returnDeletedJobExecutionResponse(new String[] {jobExec.getId()});
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getJobExecutionId(), is(jobExec.getId()));
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getIsDeleted(), is(true));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getJobExecutionId(), is(jobExec.getId()));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getIsDeleted(), is(true));
 
     Async async = testContext.async();
     RestAssured.given()
@@ -2632,11 +2632,11 @@ public class ChangeManagerAPITest extends AbstractRestTest {
       constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     DeleteJobExecutionsResp deleteJobExecutionsResp = returnDeletedJobExecutionResponse(new String[] {jobExec.getId()});
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getJobExecutionId(), is(jobExec.getId()));
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getIsDeleted(), is(true));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getJobExecutionId(), is(jobExec.getId()));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getIsDeleted(), is(true));
 
     RestAssured.given()
       .spec(spec)
